add style.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Lela Deslauriers</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body>
     <h1>Hello there, I'm Lela</h1>
