add script.js, connect to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body>
-    <h1>Hello there, I'm Lela</h1>
+    <h1>Hello there, I'm Lela.</h1>
+    <script src="script.js"></script>
   </body>
 </html>
