--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
   <head>
     <title>Lela Deslauriers</title>
+    <meta description="Check out my work in process Git Page.">
     <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body>
     <h1>Hello there, I'm Lela.</h1>
     <script src="script.js"></script>
+    <h3>My story...</h3>
+    <p>I aspire to build digital products that enable people to get more out of their lives, whether that's making it easier to make a difficult decision or by automating time consuming tasks so that they have more time to do what they love. Right now I'm studying Software Engineering at the Flatiron School, and previously I've had the privilege of helping high growth companies like Dropbox and mature companies like Apple achieve ambitious growth goals.</p>
+    <div id="footer">
+        <a href="https://linktr.ee/leladeslauriers">See what's new on my Linktree.</a> <a href="https://www.linkedin.com/in/leladeslauriers">Let's connect on LinkedIn!</a>
+    </div>
+
   </body>
 </html>
